--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,10 @@ body {
   margin-right: 2rem;
 }
 
-/* SECTION BODY ---------------------- */
+/*------------------------------------ */
+/* INDEX . HMTL                        */
+/*------------------------------------ */
+
 
 .left-panel {
   height: 100%;
@@ -71,9 +74,96 @@ body {
   height: 10vh;
 }
 
+.icon a:active {
+  outline: 1px dotted black; 
+}
+
 .contact {
   max-width: 115px;
 }
+
+/*------------------------------------ */
+/* DESIGN . HMTL                       */
+/*------------------------------------ */
+
+.design-left-panel {
+  width: auto;
+  height: 100%;
+}
+
+
+.folder-nav-text {
+  color: white;
+  margin-left: 1rem;
+} 
+
+
+#root-folder-window {
+  height: 63%;
+  width: 60%;
+  margin-left: 3vw;
+  position: relative;
+  top: 10rem;
+  border: 4px solid #c3cbcf;
+  border-style: outset;
+
+}
+
+.root-window-top {
+  width: auto;
+  height: 3rem;
+  background-color: #00017f;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+
+}
+
+.root-window-icons {
+  margin-right: 1rem;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.question-mark-icon {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  margin-right: 1rem;
+  width: 1.5rem;
+  height: 1.5rem;
+  background-color: #B8B8B8;
+  border-top: 2px solid #c3cbcf;
+  border-left: 3px solid #c3cbcf;
+  border-right: 2px solid #1b1b1b;
+  border-bottom: 2px solid #1b1b1b;
+
+}
+
+.exit-icon {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  width: 1.5rem;
+  height: 1.5rem;
+  background-color: #B8B8B8;
+  border-top: 2px solid #c3cbcf;
+  border-left: 3px solid #c3cbcf;
+  border-right: 2px solid #1b1b1b;
+  border-bottom: 2px solid #1b1b1b;
+
+}
+
+.root-window-bottom {
+  width: auto;
+  height: auto;
+  background-color:#c0c0c0;
+
+}
+
 
 
 /* GLOBAL ---------------------------- */
